# Cmake_first_project

./: CMakeLists.txt  main.cpp
lib/GLFW/: CMakeLists.txt  glfw3.h  glfw3native.h
lib/backend/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
lib/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
libs/GLFW/: CMakeLIsts.txt  glfw3.h  glfw3native.h
libs/backend/: CMakeLists.txt  imgui_impl_glfw.cpp
libs/imgui/: CMakeLists.txt
